fix: content alignment. add flex behavior for individual article cards

--- a/style.css
+++ b/style.css
@@ -335,10 +335,11 @@ position: relative;
 }
 
 article {
-    display: flex;
-    width: 10rem;
-    justify-content: space-around;
-    gap: 0.5rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  min-width: 12rem;
+  flex: 1 1 40%;
 }
 
 article .icon {
